RIP-v8.6 - / rules overflow fix

--- a/css/login.css
+++ b/css/login.css
@@ -4,7 +4,7 @@
   grid-template-rows: 1fr;
   padding-top: 90px;
   width: 100%;
-  height: auto;
+  height: 100%;
   grid-template-areas:
     " content header";
 
